unpackaged/main/default/objects/Account/fields/Employer_Level_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Employer_Level_Effective_Date__c</fullName>
    <label>Employer Level Effective Date</label>
    <type>Date</type>
</CustomField>