unpackaged/main/default/objects/Account/fields/Gift_Entry_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Gift_Entry_External_Id__c</fullName>
    <description>Gift Entry External Id Field</description>
    <externalId>true</externalId>
    <label>Gift Entry External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>