unpackaged/main/default/objects/Account/fields/Level_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Relationship__c</fullName>
    <label>Level of Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Emerging</fullName>
            </value>
            <value>
                <fullName>Established</fullName>
            </value>
            <value>
                <fullName>Deep Partnership</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>No Longer DWD compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>