unpackaged/main/default/objects/Account/fields/Offboarding_Reason__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Reason__c</fullName>
    <label>Offboarding Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of Service Area</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Does not meet standards</fullName>
            </value>
            <value>
                <fullName>Not Mission Aligned</fullName>
            </value>
            <value>
                <fullName>MOU Was Not Renewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>