unpackaged/main/default/objects/Account/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Pipeline</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Renewal/Expansion Review</fullName>
            </value>
            <value>
                <fullName>Offboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>