unpackaged/main/default/objects/Account/fields/Sends_Sensitive_Info__c.field-meta.xml
<CustomField>
    <fullName>Sends_Sensitive_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DWDECI-37. Flags that this Partner sends sensitive inbound information. Visible to all internal users - not restricted, unlike Sensitive_Inbound_Details__c.</description>
    <inlineHelpText>Check if this Partner submits sensitive information (e.g. via referrals or incidents).</inlineHelpText>
    <label>Sends Sensitive Info</label>
    <type>Checkbox</type>
</CustomField>