unpackaged/main/default/objects/Account/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Area</label>
    <referenceTo>Service_Area__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>