unpackaged/main/default/objects/Account/recordTypes/Secondary_School.recordType-meta.xml
<RecordType>
    <fullName>Secondary_School</fullName>
    <active>true</active>
    <label>Secondary School</label>
</RecordType>