unpackaged/main/default/objects/Account/validationRules/Business_Account_Addresses_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Account_Addresses_Required</fullName>
    <active>true</active>
    <description>Required fields upon creation: Billing Address; City; Zip Code</description>
    <errorConditionFormula>AND(
  NOT(IsPersonAccount),
  OR(
    ISBLANK(BillingStreet),
    ISBLANK(BillingCity),
    ISBLANK(BillingPostalCode)
  )
)</errorConditionFormula>
    <errorMessage>Billing Address, City and Zip Code are required.</errorMessage>
</ValidationRule>