unpackaged/main/default/objects/Account/validationRules/Person_Account_Addresses_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Account_Addresses_Required</fullName>
    <active>true</active>
    <description>Required Fields upon creation: Mailing Address; City; Zip Code</description>
    <errorConditionFormula>AND(
  IsPersonAccount,
  OR(
    ISBLANK(PersonMailingStreet),
    ISBLANK(PersonMailingCity),
    ISBLANK(PersonMailingPostalCode)
  )
)</errorConditionFormula>
    <errorMessage>Mailing Address, City and Zip Code Info are required.</errorMessage>
</ValidationRule>